<resources>
    <string name="app_name">Movies App</string>
    <string name="image_domain">https://www.themoviedb.org/t/p/w440_and_h660_face</string>
    <string name="api_key">6cea5507c1dafd8f492d1d9a552483bc</string>
    <string name="trend_movies">Trend Movies</string>
    <string name="all_films">All Films</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_average">Vote Average</string>
    <string name="popularity">Popularity</string>
    <string name="cast">Cast</string>
</resources>