<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pnl_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_grey"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="150dp"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/dark_grey"
                            app:cardCornerRadius="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                            <ImageView
                                android:id="@+id/ivMovie"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/trend_movies"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/ic_launcher_background" />
                        </androidx.cardview.widget.CardView>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="2"
                            android:padding="10dp">


                            <TextView
                                android:id="@+id/tv_movie_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="The Hunger Games: Mockingjay - Part 1" />


                            <LinearLayout
                                android:id="@+id/pnl_star_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title">

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:padding="1dp"
                                    android:src="@drawable/star" />

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:padding="1dp"
                                    android:src="@drawable/star" />

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:padding="1dp"
                                    android:src="@drawable/star" />

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:padding="1dp"
                                    android:src="@drawable/star" />

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:padding="1dp"
                                    android:src="@drawable/star" />

                            </LinearLayout>


                            <TextView
                                android:id="@+id/tvGenre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="15dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:textColor="@color/dark_grey"
                                android:textSize="12sp"
                                app:layout_constraintBottom_toTopOf="@+id/tvDuration"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/pnl_star_container"
                                tools:text="Romance / Comedy /Action" />

                            <TextView
                                android:id="@+id/tvDuration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/dark_grey2"
                                android:textSize="11sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:text="1 hr 30 mins" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pnl_header">


                    <TextView
                        android:id="@+id/tvOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineHeight="20dp"
                        android:lineSpacingExtra="3dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/dark_grey2"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:targetApi="p"
                        tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground fight clubs forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion." />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvVoteCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineHeight="20dp"
                                    android:lineSpacingExtra="3dp"
                                    android:textColor="@color/black"
                                    android:textSize="17sp"
                                    android:textStyle="bold"
                                    tools:text="83" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:lineSpacingExtra="3dp"
                                    android:text="@string/vote_count"
                                    android:textColor="@color/dark_grey2"
                                    android:textSize="13sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:alpha="0.5"
                                android:background="@color/light_grey" />
                        </FrameLayout>


                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvVoteAverage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineHeight="20dp"
                                    android:lineSpacingExtra="3dp"
                                    android:textColor="@color/black"
                                    android:textSize="17sp"
                                    android:textStyle="bold"
                                    tools:text="83" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:lineSpacingExtra="3dp"
                                    android:text="@string/vote_average"
                                    android:textColor="@color/dark_grey2"
                                    android:textSize="13sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:alpha="0.5"
                                android:background="@color/light_grey" />
                        </FrameLayout>


                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvPopularity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineHeight="20dp"
                                    android:lineSpacingExtra="3dp"
                                    android:textColor="@color/black"
                                    android:textSize="17sp"
                                    android:textStyle="bold"
                                    tools:text="83" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:lineSpacingExtra="3dp"
                                    android:text="@string/popularity"
                                    android:textColor="@color/dark_grey2"
                                    android:textSize="13sp" />
                            </LinearLayout>

                        </FrameLayout>
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:maxLines="2"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/cast"
                        android:textColor="@color/dark_grey2"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCasts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@null"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dark_grey" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>